<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConsultarPalabra" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_verb_infinitive" />

    <TextView
        android:id="@+id/textInfinitivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:text="@string/lable_verb_simple" />

    <EditText
        android:id="@+id/editParticipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editParticipio"
        android:layout_alignBottom="@+id/editParticipio"
        android:layout_alignLeft="@+id/textView1"
        android:layout_toLeftOf="@+id/textView3"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/textInfinitivo"
        android:text="@string/label_verb_participle" />

    <TextView
        android:id="@+id/textRespuestaSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editSimple"
        android:layout_below="@+id/editSimple"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/textRespuestaParticipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textRespuestaSimple"
        android:layout_alignLeft="@+id/editParticipio" />

    <TextView
        android:id="@+id/textSignificado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textRespuestaSimple"
        android:layout_below="@+id/textRespuestaSimple" />

    <Button
        android:id="@+id/buttonSignificado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSignificado"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/textRespuestaParticipio"
        android:onClick="siguiente"
        android:text="@string/lableSig" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSignificado"
        android:layout_alignLeft="@+id/textSignificado"
        android:onClick="validarRespuesta"
        android:text="@string/validar" />

</RelativeLayout>